[I-15] refactor: collect(Collectors.toList()) -> toList() 변경